# e91-final

./: CMakeLists.txt  README.md
biped-footstep-planner/: CMakeLists.txt  README.md  query.txt
biped-footstep-planner/include/: biped.h  dubin.h  pathplanner.h
biped-footstep-planner/src/: Checker.cpp  GridSearch.cpp  OccupancyGrid.cpp  bipedDemo.cpp  bipedSearch.cpp  biped_checker.cpp  dubin.cpp  dubinSearch.cpp  lab3.cpp  pathplanner.cpp  search.cpp
darwin/: CMakeLists.txt
darwin/Framework/include/: Body.h
darwin/Framework/src/motion/modules/: Body.cpp
darwin/Linux/: CMakeLists.txt
darwin/Linux/project/: CMakeLists.txt
darwin/Linux/project/demo/: CMakeLists.txt  Makefile  main.cpp
darwin/Linux/project/tutorial/: CMakeLists.txt
darwin/Linux/project/tutorial/head_tracking/: Makefile
darwin/Linux/project/tutorial/read_write/: CMakeLists.txt
darwin/Linux/project/tutorial/waving/: CMakeLists.txt  waving.cpp  waving.cpp~  waving.h  waving.h~
fakerave/: .gitignore  CMakeLists.txt  Doxyfile  README.md  darwin.kinbody.xml  mzsettings.cmake
fakerave/darwin/: darwin.xml
fakerave/matlab/: huboAnkleForces.m  timing.txt  zmp_plot.m
fakerave/mzcommon/: Box3.h  CMakeLists.txt  GlCamera.cpp  GlCamera.h  MzGlWidget.cpp  MzGlWidget.h  MzGlutApp.cpp  MzGlutApp.h  SimpleConfig.h  TimeUtil.h  TinyDom.cpp  TinyDom.h  Transform3.h  TriMesh3.cpp  TriMesh3.h  glstuff.cpp  glstuff.h  mat3.h  mat4.h  mersenne.h  quat.h  testeigen.cpp  testwrl.cpp  vec2.h  vec3.h  vec4.h
fakerave/python/: ZmpPreview.py
fakerave/src/: Biped.cpp  Biped.h  CMakeLists.txt  Darwin.cpp  Darwin.h  ZmpPreview.h  fakerave.cpp  fakerave.h  fakerave_parse.cpp  hubo_joint_count.h  reconcile.cpp  testchomp.cpp  testcomik.cpp  testgrasp.cpp  testik.cpp  testkin.cpp  testrave.cpp  testzmp.cpp  walkdemo.cpp
fakerave/zmp/: CMakeLists.txt  draw-footprints.h  footprint-example.cpp  footprint-test.cpp  footprint.cpp  footprint.h  gait-timer-test.cpp  gait-timer.cpp  gait-timer.h  hubo-zmp.h  swing-test.cpp  swing.cpp  swing.h  zmpdemo.cpp  zmpwalkgenerator.cpp  zmpwalkgenerator.h
overlay_ws/src/biped_planner/: .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  package.xml
overlay_ws/src/biped_planner/include/: Checker.h  GridSearch.h  OccupancyGrid.h  bipedSearch.h  biped_checker.h  dubinSearch.h  lab3.h  pathplanner.h  vec2u.h
overlay_ws/src/biped_planner/msg/: .Footstep.msg.swp  .Line.msg.swp  Footstep.msg  Line.msg  RobotSegment.msg
overlay_ws/src/biped_planner/src/: .biped.cpp.swp  .bipedDemo.cpp.swp  .biped_planner.cpp.swp  biped.cpp  bipedDemo.cpp  bipedPlan.cpp  biped_checker.cpp  biped_planner.cpp  biped_test.cpp  lab3_solution.cpp  main.cpp
pathplanner/: CMakeLists.txt
pathplanner/src/: .lines.txt.swp  .pathplanner.cpp.swp  .pathplanner.h.swp  .plan_test.cpp.swp  lines.txt  pathplanner.cpp  pathplanner.h  plan_test.cpp
